--- a/blinds.html
+++ b/blinds.html
@@ -130,7 +130,8 @@
 </p><p>Conveniently operate your smart home blinds using the HomeKit™ app or by voice using Siri™.. from anywhere! Ikea smart blinds or Somfy or Acmeda? Many brands are compatible.</p><p>"Siri, open the bedroom blinds to 50%".&nbsp;<span style="font-size: 1rem;">Easily program blinds or curtains to be part of an automated scene. Have them open automatically at dawn or close at dusk.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Close selected blinds automatically when the air conditioning activates or when the temperature outside reaches a certain level. Add convenience and comfort, while saving money on your energy bills. Alternatively close blinds automatically when the house is armed at night to improve security.&nbsp;</span></p><p><span style="font-size: 1rem;">Integrate existing motorised blinds without having to replace them. Most popular brands are Somfy and Acmeda, but House-mate works with many more.</span><br></p>
+                     <p><span style="font-size: 1rem;">Close selected blinds automatically when the air conditioning activates or when the temperature outside reaches a certain level. Add convenience and comfort, while saving money on your energy bills. Alternatively close blinds automatically when the house is armed at night to improve security.&nbsp;</span></p><p><span style="font-size: 1rem;">Integrate existing motorised blinds without having to replace them. Most popular brands are Somfy and Acmeda, but House-mate works with many more. <br><br>
+<a href="pros-and-cons-of-smart-blinds.html">Article: Advantages and Disadvantages of Smart Blinds</a></span><br></p>
                 </div>
                 
             </div>
