--- a/lighting.html
+++ b/lighting.html
@@ -124,7 +124,8 @@
                      <p><span style="font-size: 1rem;">Smart lighting solutions can be installed into existing homes or new homes. Control lights using HomeKit™ or by using voice assistants like Siri™, Google Home, or Alexa.&nbsp;</span></p><p>In-wall wifi light switches are available that control all lights on a circuit. Set your lights to any desired brightness level with ease at the touch of a button or by voice.  Alternatively purchase individual smart light bulbs or strip lights. Nanoleaf smart light panels are very popular.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Control lights using an automated scene. When&nbsp;</span><span style="font-size: 1rem;">the bathroom lights are activated between 11pm &amp; 6am only illuminate to 20%, or&nbsp;</span><span style="font-size: 1rem;">when the garage door is opened at night turn on the entrance and hallway lights automatically for 10 minutes.</span></p><p><span style="font-size: 1rem;"><br></span></p>
+                     <p><span style="font-size: 1rem;">Control lights using an automated scene. When&nbsp;</span><span style="font-size: 1rem;">the bathroom lights are activated between 11pm &amp; 6am only illuminate to 20%, or&nbsp;</span><span style="font-size: 1rem;">when the garage door is opened at night turn on the entrance and hallway lights automatically for 10 minutes. <br><br>
+<a href="pros-and-cons-of-smart-lighting.html">Article: Advantages and Disadvantages of Smart Lighting</a></span></p><p><span style="font-size: 1rem;"><br></span></p>
                 </div>
                 
             </div>
