--- a/pros-and-cons-of-smart-plugs.html
+++ b/pros-and-cons-of-smart-plugs.html
@@ -240,7 +240,7 @@ Some electrical appliances consume a lot of power and the plugs may not be rated
 
 <details>
 		<summary>Costs of Smart plugs</summary>
-		As of October  
+		Coming Soon
  
 
 </p>
