--- a/pros-and-cons-of-smart-irrigation.html
+++ b/pros-and-cons-of-smart-irrigation.html
@@ -158,23 +158,21 @@ details[open] summary {
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p><b>What is a smart irrigation system?</b><br>  
-Smart irrigation systems essentially import weather data into the controller and adjust its settings, much like a thermostat on a heating and air conditioning system.
-Instead of having a basic, time-based program which will operate regardless of what the weather is doing, smart systems will adjust the time and days it will run according to the demand or need of irrigation based on the weather.
-Many components make up the irrigation system, and recently there has also been a push on high-efficiency solenoids and nozzles.
-These together make up a smart irrigation system or a high-efficiency irrigation system. <br>
-Difficult to use and reliant on physical input, traditional ‘dumb’ controllers scrambled to make antiquated functionality fit modern needs.  Many manufacturers developed cutting-edge technology for a smarter watering solution. They saw an immediate demand, especially with smartphone users and backyard enthusiasts.
-The technology has advanced, and the costs of production have come down, which allows manufacturers to offer a price sensitive range of residential smart controllers. Smart irrigation has come a long way in recent years with the capability of systems improving considerably.
+Smart irrigation systems essentially import weather data into the controller and adjust their settings, much like a thermostat on an air conditioning system.
+Instead of having a basic, timer-based program which will operate regardless of what the weather is doing, smart systems will adjust the time and days they water according to the demand or need for irrigation based on the weather.
+Many components make up an irrigation system, and recently there has also been a push on high-efficiency solenoids and nozzles. Combined these make up a smart irrigation system or a high-efficiency irrigation system. <br><br>
+<b>How do smart irrigation systems differ from older style units?</b><br>
+Difficult to use and reliant on physical input, traditional ‘dumb’ controller manufacturers tried to make antiquated functionality fit modern needs.  Many manufacturers developed cutting-edge technology for a smarter watering solution. They saw an immediate demand, especially with smartphone users and backyard enthusiasts.
+The technology has advanced, and the costs of production have come down allowing manufacturers to offer an affordable range of residential smart controllers. Smart irrigation has come a long way in recent years with the capability of systems improving considerably.<br>
  <br>
 <b>What Are You Trying To Achieve With Smart Irrigation?</b><br>
-If zoned irrigation or rain sensors aren’t important to you, the cost of a smart sprinkler system may not be worth it in the long run. Most of the time, homeowners base this need on the size of their lawn or garden beds. A small garden won’t need the same level of maintenance as a larger one, so the smart controller won’t be as effective.
+If zoned irrigation or rain sensors aren’t important to you, the cost of a smart sprinkler system may not be worth it in the long run. Most of the time, homeowners base this need on the size of their lawn or garden. A small garden won’t need the same level of maintenance as a larger one, so the smart controller won’t be as effective.
 However, if the functionality and control of a smart sprinkler can help you save money and time in your daily life, the transition will be both cost-effective and useful.
- <br>
-<b>Subscription Fees?</b><br>
+ <br><br>
+<b>Are there on going costs or subscription fees?</b><br>
 In order to save operating costs on your smart sprinkler system, it’s important to avoid models with additonal service fees. Some may require fees for climate and weather information packages. Others may have communication charges.
-Look for systems that don’t require these additional fees. This will make the investment into the smart system smarter and avoid excessive costs.<br>
-<b>How Easy is it To Use?</b><br>
-No matter how smart a system is, if it is difficult to use you simply won’t use it. Evaluating the systems will give you an idea of whether it would be a challenge to set up or keep running. It’s always important to understand that a smart sprinkler controller is tech that uses advanced software. But as with any technology, software can exist at a different level of user-friendliness than other similar products. Look at ones that will be easy for you to use and encourages you to interact with it as necessary. 
- <br>
+Look for systems that don’t require these additional fees. This will make the investment into the smart system worthwhile and avoid excessive costs.<br><br>
+
 
 
  
@@ -183,28 +181,22 @@ No matter how smart a system is, if it is difficult to use you simply won’t us
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">
-<b>Can You Manage it With Your Smart Phone?</b><br>
-A smart controller should sync with your smart phone to offer you access while you’re away from home. You can set it to provide alerts as well as be able to interrupt service or change the watering schedule remotely. Make sure that your chosen system works with your specific smart phone OS, like Apple or Android.<br>
-<b>How Accurate is the Weather Reporting?</b><br>
-One of the primary benefits with smart sprinkler controllers is the weather data is accurate and helps your smart controller irrigate your lawn based on needs. Especially in areas concerned by drought, your smart controller understanding the weather and rain patterns and irrigating accordingly will be the most important benefit of the system.
+<b>Are smart irrigation systems easy to use?</b><br>
+No matter how smart a system is, if it's difficult to use you simply won’t use it. Evaluating the systems will give you an idea of whether it would be a challenge to set up or keep running. It’s always important to understand that a smart sprinkler controller is technology that uses advanced software. But as with any technology, software can exist at a different level of user-friendliness than other similar products. Look at ones that will be easy for you to use and encourages you to interact with it as necessary. 
+ <br><br>
+
+<b>How is smart irrigation operated?</b><br>
+A smart controller synchronises with your smart phone for access while you’re away from home. You can set it to provide alerts and also interrupt the watering schedule remotely. Most smart irrigation systems come with their own app for you phone.  At House-mate we get your phone operating with everything else via Apple HomeKit or Google Home.<br><br>
+<b>How accurate is the weather reporting?</b><br>
+One of the primary benefits with smart sprinkler controllers is the weather data is accurate and helps the smart controller irrigate your lawn based on watering needs. Especially in areas concerned by drought, your smart controller understanding the weather and rain patterns and irrigating accordingly will be the most important benefit of the system.
 <br>
-______________________
-Almost 75 percent of Australians claim they know how long they should water their lawn, but research also shows that Australians drastically underestimate how much water they use when watering. Seventy-seven percent believe they use anywhere between 5 litres to 1100 litres of water per 1000 square metres.  
-<br>
+
+Almost 75% of Australians claim they know how long they should water their lawn, but research also shows that Australians drastically underestimate how much water they use when watering. Most believe they use anywhere between 50 litres to 500 litres of water per 1000 square metres.  
+<br><br>
 
 <b>Demographics and popularity</b><br>
-As to why smart irrigation systems have become so popular, there are a few key benefits that drive these systems. Firstly, is the convenience and ease that smart irrigation system offer by giving users complete control via their mobile devices from anywhere.<br>  
-The second benefit says these systems bring is the ability to use smart scheduling that adjusts to the weather, which will ultimately save money on water bills.<br>
-The third benefit is integration with voice assistants such as Amazon Alexa, Apple HomeKit and Google Home making control of irrigation even easier.<br>
-Utilising cloud technology, controllers connect to the internet to regularly receive weather updates that adjust to changing weather data, and in turn tailor watering to the specific needs of each garden and optimizing watering.<br>
 Very few Australians own a smart sprinkler system, despite concerns about wasting water; many claim they don’t see a need for a smart sprinkler. Before technology came into play, users would err on the side of overwatering to make sure their lawns were sufficiently moist.<br>
-As the cost of water continues to climb people have become more aware of water usage, the desire to use the appropriate amount of water is what really has driven demand. <br>
-
-
-One of the challenges with irrigation is, traditionally, you had to be in front of the controller in order to know if there’s anything going on.  But now with phone apps and other things, you have remote access to it wherever you are. So, people are way more in touch with what’s happening with the irrigation system.
-
-
-
+As the cost of water continues to climb people have become more aware of water usage.  The desire to use an appropriate amount of water is what has really has driven demand. <br>
 
 
 </span><br></p>
@@ -227,24 +219,43 @@ One of the challenges with irrigation is, traditionally, you had to be in front 
                      
 <details>
 		<summary>Advantages of Smart Irrigation</summary>
-		Smart irrigation systems offer a variety of advantages over traditional irrigation systems.  Smart irrigation systems can optimize water levels based on things such as soil moisture and weather predictions.  This is done with wireless moisture sensors that communicate with the smart irrigation controls and help inform the system whether or not the landscape is in need of water.  Additionally, the smart irrigation controlled receives local weather data that can help it determine when a landscape should be watered.  If you have ever returned home during a storm only to see your sprinklers spraying water you know how beneficial this is.  Rather than wasting water resources and your valuable money on watering your landscape you can take advantage of the nature moisture from the storm and save that water for another day when it is more needed.  The advantages of these smart irrigation systems are wide reaching.  The smart irrigation system will help you have better control of your landscape and irrigation needs as well as peace of mind that the smart system can make decisions independently if you are away.  YOu will save a significant amount of money on your water bills because through intelligent control and automation, your smart irrigation system will optimize resources so that everything gets what it needs without needless waste.  Additionally, we have all seen many places in the country that have experienced droughts and we know that our water resources are precious.  With smart irrigation systems we can be better stewards of our resources which is better for the environment.  The opportunity to save dramatically, have better control and be more eco-friendly while maintaining a lush and beautiful landscape are just a few of the advantages a smart irrigation system provides and would make a wonderful addition to any home.
+		Smart irrigation systems offer a variety of advantages over traditional irrigation systems.  <br>
+<br>
+<b>Convenience and ease</b><br>
+Smart irrigation systems give users complete control via their mobile devices from anywhere. Traditionally, you had to be in front of the controller in order to know if there’s anything going on.  But now with Apple HomeKit and other apps you have remote access to the system from wherever you are. So, people are way more in touch with what’s happening with the irrigation system.<br>
+<br>
+<b>Smart scheduling</b><br>  
+These systems use smart scheduling that adjust to the weather which will ultimately save money on water bills. Utilising cloud technology, controllers connect to the internet to regularly receive weather updates and adjust to changing weather data.  In turn, they tailor watering to the specific needs of each garden and optimise watering. Gone are the days of returning home during a storm only to see your sprinklers wasting water. <br>
+<br>
+<b>Voice integration</b><br>
+Integration with voice assistants such as Amazon Alexa, Apple HomeKit and Google Home make control of irrigation even easier.<br>
+<br>
+<b>Smart sensors</b><br>
+Smart irrigation systems can optimize water levels based on things such as soil moisture and weather predictions.  This is done with wireless moisture sensors that communicate with the smart irrigation controls and help inform the system whether or not the landscape is in need of water.  <br>
+<br>
+
+The advantages of these smart irrigation systems are wide reaching.  The smart irrigation system will help you have better control of your landscape and irrigation needs as well as peace of mind that the smart system can make decisions independently if you are away.  You will save a significant amount of money on your water bills because through intelligent control and automation, your smart irrigation system will optimize resources so that everything gets what it needs without needless waste.  With smart irrigation systems we can be better stewards of our resources which is better for the environment.  The opportunity to save dramatically, have better control and be more eco-friendly while maintaining a lush and beautiful landscape are just a few of the advantages a smart irrigation system provides and would make a wonderful addition to any home.<br>
 
    
 </p>
 	</details>
 	<details>
 		<summary>Disadvantages of Smart Irrigation</summary>
-		Smart irrigation system disadvantages
-smart watering system is a bit expensive. Depending on the size of your property, you will need more systems. Of course saving on water bills will lead to less cost.
+		There are a few drawbacks to smart watering systems that prospective buyers should be aware of.<br>
+<br>
+<b>Cost to deploy</b><br>
+Smart irrigation system can be a bit expensive. Depending on the size of your property, you will need a multiple zone controller and a solenoid per zone.  Each solenoid will need to be hard wired to the controller.  Savvy installers put all the solenoids together to prevent the need to run wires to different parts of the garden.  However, this means more tubing from one central spot (located near the tap) to the different areas of the garden. <br>
+<br>
+<b>Benefits are only realised in medium sized gardens</b><br>
 
-If you want to use this system for lawn watering, it’s better to fix it under the ground before planting. Because some parts of the lawn will be harm because of holing. 
+The effort and time required to install a system is not worthwhile if you own a small garden and don't need zone control. A smart irrigation system is cost effective when four zones or more are installed. <br> 
 
 </p>
 	</details>
 
 <details>
 		<summary>Costs of Smart Irrigation</summary>
-		As of October  
+		Coming very soon.   
  
 
 </p>
@@ -266,14 +277,11 @@ If you want to use this system for lawn watering, it’s better to fix it under 
             <div class="col-md-12 col-lg-10">
              <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    Are Smart Irrigation Worth It?
+                    Is Smart Irrigation Worth It?
                 </h5>
                 <p class="mbr-text mbr-fonts-style display-7">
                     
-Smart sprinkler controllers give you access to your sprinklers wherever and whenever you need from your phone.  They also create dynamic schedules that adjust due to weather and seasonal changes based on your plants, soil, sun exposure and more. This creates a customized schedule that is custom tuned to your garden to make sure your plants get just the right amount of water at just the right time.
-Looking to the future, popularity for systems like these will only continue to grow, especially with the amount of new feature potential that comes with technological devices like these.
-
-Rachio 3 smart sprinkler control is a wireless flow meter, which he says allows users to know exactly how much water they’re using, as well as give them protection against wasting water due to leaks, broken pipes, broken heads and other problems with the system.
+Smart sprinkler controllers give you access to your sprinklers wherever and whenever you need from your phone.  They also create dynamic schedules that adjust due to weather and seasonal changes based on your plants, soil, sun exposure and more. This creates a customized schedule that is custom tuned to your garden to make sure your plants get just the right amount of water at just the right time. Looking to the future, popularity for systems like these will only continue to grow, especially with the amount of new feature potential that comes with technological devices like these. Rachio 3 smart sprinkler control is a wireless flow meter, which allows users to know exactly how much water they’re using, as well as give them protection against wasting water due to leaks, broken pipes, broken heads and other problems with the system.
 </p>
 <br>
             </div>
