--- a/irrigation.html
+++ b/irrigation.html
@@ -124,7 +124,9 @@
 </p><p>The best smart irrigation solutions automatically adjust watering every day based on localised weather information (rainfall, temperature, wind and evaporation).</p><p><span style="font-size: 1rem;">Conveniently operate your sprinklers from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available.&nbsp;</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Wifi sprinklers controllers can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. <span style="font-size: 1rem;">Cycle any zone(s) at the touch of a button or via voice command. "Hey Siri, water the front lawn".</span></p><p><span style="font-size: 1rem;">Modernising water management means healthier gardens, lower water &amp; energy consumption. Smart irrigation delivers a thriving and lush landscape.</span></p>
+                     <p>Wifi sprinklers controllers can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. <span style="font-size: 1rem;">Cycle any zone(s) at the touch of a button or via voice command. "Hey Siri, water the front lawn".</span></p><p><span style="font-size: 1rem;">Modernising water management means healthier gardens, lower water &amp; energy consumption. Smart irrigation delivers a thriving and lush landscape.<br><br>
+<a href="pros-and-cons-of-smart-irrigation.html">Article: Advantages and Disadvantages of Smart Irrigation</a>
+</span></p>
                 </div>
                 
             </div>
