--- a/pros-and-cons-of-smart-irrigation.html
+++ b/pros-and-cons-of-smart-irrigation.html
@@ -277,7 +277,7 @@ The effort and time required to install a system is not worthwhile if you own a 
             <div class="col-md-12 col-lg-10">
              <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    Is Smart Irrigation Worth It?
+                    Is smart irrigation worth it?
                 </h5>
                 <p class="mbr-text mbr-fonts-style display-7">
                     
