--- a/pros-and-cons-of-smart-irrigation.html
+++ b/pros-and-cons-of-smart-irrigation.html
@@ -158,7 +158,7 @@ details[open] summary {
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p><b>What is a smart irrigation system?</b><br>  
-Smart irrigation systems essentially import weather data into the controller and adjust their settings, much like a thermostat on an air conditioning system.
+A popular part of most home automation systems is a smart irrigation controller. Smart irrigation controllers import weather data into the controller and adjust its settings, much like a thermostat adjusts an air conditioning system.
 Instead of having a basic, timer-based program which will operate regardless of what the weather is doing, smart systems will adjust the time and days they water according to the demand or need for irrigation based on the weather.
 Many components make up an irrigation system, and recently there has also been a push on high-efficiency solenoids and nozzles. Combined these make up a smart irrigation system or a high-efficiency irrigation system. <br><br>
 <b>How do smart irrigation systems differ from older style units?</b><br>
