--- a/index.html
+++ b/index.html
@@ -65,6 +65,45 @@
   
   
 </head>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "url": "https://house-mate.com.au/",
+  "potentialAction": [
+    {
+      "@type": "SearchAction",
+      "target": "https://house-mate.com.au/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  ]
+}
+</script>
+
+
+<script type="application/ld+json">
+{
+    "@type": "BreadcrumbList",
+    "@id": "https://house-mate.com.au/#breadcrumb",
+    "itemListElement": [
+        {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+                "@type": "WebPage",
+                "@id": "https://house-mate.com.au/",
+                "url": "https://house-mate.com.au/",
+                "name": "Home"
+            }
+        }
+    ]
+}
+</script>
+
+
+
+
 <body>
 
 <div id="fb-root"></div>
