--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Lighting control system. Have lights illuminate to a set % between nominated times; bathroom lights set to 10% between midnight and 5am. Easily operate light circuits or alternatively control them without being at home at all. Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. More about <a href="lighting.html">smart lighting here</a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Lighting control system. Easily operate light circuits, dim or control without being at home at all. Have lights illuminate to a set level between selected times; set the bathroom lights to operate at 10% brightness between midnight and 5am.  Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. More about <a href="lighting.html">smart lighting here</a><br></p>
                     </div>
                 </div>
 
