index update resize images down

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
             <div class="mbr-figure m-auto" style="width: 30%;">
                <picture>
-<source type="image/webp" srcset="assets/images/webp/front1-800x385.webp">
-<img src="assets/images/front1-800x385.jpg" alt="House-Mate" title="">
+<source type="image/webp" srcset="assets/images/webp/front1-600x289.webp">
+<img src="assets/images/front1-600x289.jpg" alt="House-Mate" title="Apple HomeKit Environment">
 
 </picture>
             </div>
@@ -288,7 +288,7 @@
             <div class="mbr-figure m-auto" style="width: 30%;">
                 <picture>
 <source type="image/webp" srcset="assets/images/webp/front2-599x615.webp">
-<img src="assets/images/front2-599x615.jpg" alt="House-mate" title="">
+<img src="assets/images/front2-599x615.jpg" alt="House-mate" title="Full home control via one voice enabled app!">
 
 </picture>
             </div>
