--- a/pool.html
+++ b/pool.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="canonical" href="https://house-mate.com.au/pool.html" />
 <meta property="og:title" content="House-mate Smart Home Automation">
-<meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
+<meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-Mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
 <meta property="og:url" content="https://house-mate.com.au/pool.html" />
@@ -101,9 +101,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Pool &amp; Spa Automation</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Pool and spa control using HomeKit™ and Siri™ from anywhere</p>
+               <h1 style="font-size:6vw"><b>Smart Pool & Spa</b></h1>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control pool and spa control using HomeKit™ and Siri™</p>
                 
             </div>
         </div>
