--- a/cbus.html
+++ b/cbus.html
@@ -103,9 +103,9 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Smart CBUS Integration</h1>
+               <h1 style="font-size:6vw"><b>CBUS-HomeKit Integration</b></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control CBUS using HomeKit™ and Siri™ from anywhere</p>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control CBUS using HomeKit™ and Siri™ from anywhere</p>
                 
             </div>
         </div>
