--- a/garage.html
+++ b/garage.html
@@ -103,9 +103,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Garage Door Automation</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control garage doors using HomeKit™ and Siri™ from anywhere</p>
+                <h1 style="font-size:6vw"><b>Smart Garage Door</b></h1>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control garage doors using HomeKit™ and Siri™ from anywhere</p>
                 
             </div>
         </div>
