--- a/power.html
+++ b/power.html
@@ -101,9 +101,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Smart Power Points</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control power points using HomeKit™ and Siri™ from anywhere</p>
+                <h1 style="font-size:6vw"><b>Smart Power Points</b></h1> 
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control power points using HomeKit™ and Siri™</p>
                 
             </div>
         </div>
