--- a/remote.html
+++ b/remote.html
@@ -101,9 +101,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Smart Remote Control</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Operate remote controls using HomeKit™ and Siri™</p>
+               <h1 style="font-size:6vw"><b>Smart Remote Control</b></h1> 
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Learn remote controls using HomeKit™ and Siri™</p>
                 
             </div>
         </div>
