--- a/security.html
+++ b/security.html
@@ -101,9 +101,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Alarm System Automation</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Control alarm systems from anywhere with HomeKit™ </p>
+               <h1 style="font-size:6vw"><b>Smart Home Alarm</b></h1> 
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control alarm systems from anywhere with HomeKit™ </p>
                 
             </div>
         </div>
