--- a/sensors.html
+++ b/sensors.html
@@ -101,9 +101,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Smart Network Sensors</h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Determine if devices are connected to your network using HomeKit™ and Siri™ &nbsp;</p>
+                <h1 style="font-size:6vw"><b>Smart Network Sensors</b></h1> 
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Check whether devices are connected to your network using HomeKit™ and Siri™ &nbsp;</p>
                 
             </div>
         </div>
