--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                     <br><a href="https://furnando.com.au">©</a>
+                   
 
 <br>Partners <a href="https://blrsolutions.com.au" target="_blank" rel="noopener">BLR Solutions</a> | <a href="https://bpointcomms.com.au" target="_blank" rel="noopener">BPoint Security</a> | <a href="https://developadigital.com.au" target="_blank" rel="noopener">Developa Digital</a><br></p>
             </div>
@@ -404,7 +404,10 @@
     </div>
 </section>
 
-<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="House-Mate" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022</p>
+<section class="display-7" style="padding: 1;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://house-mate.com.au/index.html" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="House-Mate" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
+
+<p style="margin: 0;text-align: center;" class="display-9">House-Mate Home Automation 2022<a href="https://furnando.com.au">©</a></p>
+
 <a style="z-index:1" href="https://house-mate.com.au/index.html"></a></section>
 
 <br><br>
