--- a/pros-and-cons-of-smart-lighting.html
+++ b/pros-and-cons-of-smart-lighting.html
@@ -138,10 +138,10 @@ details[open] summary {
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    Smart lighting: Pros & Cons</h1>
+
+<h1 style="font-size:6vw"><b>Smart Lighting: Pros and Cons</b></h1> 
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Advantages and disadvantages of smart lighting</p>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Advantages and disadvantages of smart lighting</p>
                 
             </div>
         </div>
