--- a/pros-and-cons-of-smart-pool-and-spa.html
+++ b/pros-and-cons-of-smart-pool-and-spa.html
@@ -140,8 +140,8 @@ details[open] summary {
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
 
-<h1 style="font-size:6vw"><b>Smart Pool & Spa: Pros and Cons</b></h1> 
-                <p class="mbr-text pb-2 mbr-fonts-style display-4">Advantages and disadvantages of smart pools and spas</p>
+<h1 style="font-size:6vw"><b>Smart Pool & Spa</b></h1> 
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">The advantages and disadvantages of smart pools and spas</p>
                 
                 
             </div>
