--- a/pros-and-cons-of-smart-security.html
+++ b/pros-and-cons-of-smart-security.html
@@ -119,8 +119,23 @@ details[open] summary {
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        House-Mate Automation</a></span>
+                        House-Mate<br>Automation</a></span>
+
+
+                    
+                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" rel="noopener" href="https://www.facebook.com/HousemateAutomation/">
+                            <span class="socicon-facebook socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
+                            <span class="socicon-twitter socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
+                            <span class="socicon-instagram socicon"></span>
+                        </a>
+                        
+                  </div>
             </div>
+        </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">Intelligent Home</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">security</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security<br></a><a class="dropdown-item text-white display-4" href="garage.html" aria-expanded="false">Garage Door<br></a><a class="dropdown-item text-white display-4" href="pool.html" aria-expanded="false">Pool &amp; Spa</a><a class="dropdown-item text-white display-4" href="remote.html" aria-expanded="false">Remote Blaster</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a>  </div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">FAQ's</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="installation.html" aria-expanded="false">Installation</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ's</a><a class="dropdown-item text-white display-4" href="warranty.html" aria-expanded="false">Warranty</a><a class="dropdown-item text-white display-4" href="privacy.html" aria-expanded="false">Privacy</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html" aria-expanded="false">About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="tel:03 9000 3555" aria-expanded="false">Call</a></li></ul>
