--- a/sensors.html
+++ b/sensors.html
@@ -82,7 +82,21 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        House-Mate Automation</a></span>
+                        House-Mate<br>Automation</a></span>
+
+
+                    
+                    <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" rel="noopener" href="https://www.facebook.com/HousemateAutomation/">
+                            <span class="socicon-facebook socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
+                            <span class="socicon-twitter socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
+                            <span class="socicon-instagram socicon"></span>
+                        </a>
+                        
+                  </div>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
