--- a/thermostat.html
+++ b/thermostat.html
@@ -116,7 +116,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center"><br>
                 <h1 style="font-size:6vw"><b>Smart Thermostats</b></h1>
-                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control heating and cooling using HomeKit™ and Siri™</p>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control heating & cooling using HomeKit™ and Siri™</p>
                 
             </div>
         </div>
