--- a/security.html
+++ b/security.html
@@ -116,7 +116,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
                <h1 style="font-size:6vw"><b>Smart Home Alarm</b></h1> 
-                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control alarm systems from anywhere with HomeKit™ </p>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Control security alarm system with HomeKit™ or Siri™</p>
                 
             </div>
         </div>
