--- a/cbus.html
+++ b/cbus.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Keep you CBUS switches</h4>
+                            Keep your CBUS switches</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Existing wall switches can be kept and their functionality controlled via voice or from your iPhone,&nbsp;</p>
                     </div>
                 </div>
