--- a/faq.html
+++ b/faq.html
@@ -158,7 +158,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="title col-12 col-md-8">
+            <div class="title col-12 col-md-8"><br>
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1">
                     FAQs</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-7">
