--- a/blinds.html
+++ b/blinds.html
@@ -43,7 +43,7 @@
   <meta name="description" content="Apple HomeKit and Google Home compatible smart home blind solutions.  Blind automation | Smart tilt blinds | Hey Siri close the bedroom blinds.">
   
   
-  <title>Smart Window Blinds. Motorized Blind Integration.</title>
+  <title>Smart Home Blinds - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
