--- a/lighting.html
+++ b/lighting.html
@@ -43,7 +43,7 @@
   <meta name="description" content="Hey Siri turn on the lights! Control your lighting from your phone. Apple HomeKit compatible lighting solutions. Smart home lighting automation with House-mate.">
   
   
-  <title>Smart Switches | Lighting Control | House-Mate Automation</title>
+  <title>Smart Switches | Lighting Control - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
