--- a/cbus.html
+++ b/cbus.html
@@ -44,7 +44,7 @@
   <meta name="description" content="CBUS integration into Apple HomeKit and Google Home. Make your CBUS installation much smarter. Enable voice control of any connected CBUS device">
   
   
-  <title>CBUS-HomeKit Integration - House-Mate Automation</title>
+  <title>Smart CBUS Integration - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
