--- a/voice-assistant.html
+++ b/voice-assistant.html
@@ -123,7 +123,7 @@
    			"name": "✅ How do I give a voice command for my lights?",
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Depending on the voice assistant in use the commands vary.  "Hey Siri, switch off the bedroom lights" is the command for Apple, whereas "Alexa, turn off the bedroom lights" is the command for Amazons voice assistant."
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the bedroom lights is the command for Apple, whereas Alexa, turn off the bedroom lights is the command for Amazons voice assistant."
    			}
    		},
 
