--- a/thermostat.html
+++ b/thermostat.html
@@ -57,6 +57,100 @@
   
   
 </head>
+
+
+<script type="application/ld+json">
+   [{
+   		"@context": "https://schema.org/",
+   		"@type": "WebPage",
+   		"name": "Voice Assistant",
+   		"speakable": {
+   			"@type": "SpeakableSpecification",
+   			"xPath": [
+   				"/html/head/title",
+   				"/html/head/meta[@name='description']/@content"
+   			]
+   		},
+   		"url": "https://house-mate.com.au/thermostat.html"
+   	},
+
+ {
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "thermostat",
+        "text": "How do I operate my heating and cooling using HomeKit?",
+        "answerCount": 3,
+        "upvoteCount": 27,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Smart heating and cooling can be achieved in different ways. Smart thermostats can be installed to control the heater and cooler.  Some manufacturers produce a hub that can be plugged into your heating system and then connected to wifi for phone control.",
+          "upvoteCount": 1337,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Depends on the technology already in place. I have Google everything, so I use a Nest thermostat for control. A friend replaced his manual wall thermostat with an Ecobee smart thermostat.",
+            "upvoteCount": 42,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }, {
+            "@type": "Answer",
+            "text": "Not all smart thermostats work with all systems.  Check with your heating and cooling technician which thermostats are suitable for your home.",
+            "upvoteCount": 0,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer2"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ Can House-Mate Automation integrate Nest into HomeKit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes. Housemate Automation have the technical speicalists that can integrate Nest Thermostats into Apple Homekit."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ Do Nest thermostats work in Australia?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Nest thermostats require a third wire known as a common wire to run between the thermostat and the outdoor compressor. Most systems installed in Australia do not have a common wire in place meaning a new wire needs to be installed."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I connect Brivis reverse cycle system to home automation?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Brivis was acquired by Rinnai who produce a hub that can be connected to most Brivis systems.  The hub then connects to wifi for control of the heating and cooling."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Can Alexa control my smart thermostat?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes, voice assistants have the ability to control smart thermostats.  There are some nuances regarding which thermostats the voice assistants can operate."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
+
+
+
+
+
 <body>
   <section class="menu cid-ssrQT2cMM9" once="menu" id="menu2-3v">
 
