--- a/irrigation.html
+++ b/irrigation.html
@@ -57,6 +57,77 @@
   
   
 </head>
+
+
+<script type="application/ld+json">
+   [{
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "irrigation",
+        "text": "Does HomeKit support irrigation controllers? I am really interested to operate my sprinklers by Siri.  What are the best compatible irrigation controllers?",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Rachio have released a number of sprinkler controllers that are Apple HomeKit compatible.  Also check out Rain Bird. I found prices vary from $350 entry level to beyond $1,200",
+          "upvoteCount": 13,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Depends. Different controllers are compatible with different platforms. Most are Andriod, few Apple.",
+            "upvoteCount": 12,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ What are the advantages of smart irrigation?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Convenience and ease of remote use, smart scheduling, voice integration, smart sensors that will delay watering in the event of rain are just a few advantages of smart irrigation."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I issue a voice command for my sprinklers?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the gardenbeds is the command for Apple, whereas Alexa, switch on the front lawn for five minutes is the command for Amazons voice assistant."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ How does the automated rain delay operate?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "The system continually reads local weather reports and in the event of the chance of rain being high will activate a switch within HomeKit titled 24 hour rain delay. That switch automatically turns off 24 hours after being activated."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Are smart irrigation controllers worth it?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Smart sprinkler controllers give you access to your sprinklers wherever and whenever you need from your phone. They also create dynamic schedules that adjust due to weather and seasonal changes based on your plants, soil, sun exposure and more. This creates a schedule tuned to your garden that ensures plants get just the right amount of water at just the right time."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
+
 <body>
   <section class="menu cid-spYRjdU3xB" once="menu" id="menu2-2m">
 
