--- a/thermostat.html
+++ b/thermostat.html
@@ -95,10 +95,10 @@
    		"@type": "FAQPage",
    		"mainEntity": [{
    			"@type": "Question",
-   			"name": "✅ Can House-Mate Automation integrate Nest into HomeKit?",
+   			"name": "✅ Can Nest be integrated into HomeKit?",
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Yes. Housemate Automation have the technical speicalists that can integrate Nest Thermostats into Apple Homekit."
+   				"text": "Yes. Housemate Automation have the technical speicalists that can integrate Nest Thermostats and cameras into Apple Homekit."
    			}
    		},
 
