--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <html>
 <head>
-<link rel="canonical" href="https://house-mate.com.au/index.html" />
+<link rel="canonical" href="https://house-mate.com.au/" />
 <meta property="og:title" content="House-mate Smart Home Automation | Homekit Australia">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
-<meta property="og:url" content="https://house-mate.com.au/index.html" />
+<meta property="og:url" content="https://house-mate.com.au/" />
 
 <meta name="twitter:title" content="House-mate Smart Home Automation" />
 <meta name="twitter:site" content="@HousemateAU" />
